src/bootstrap/src/core/builder/selectors/snapshots/x_setup.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: setup
---
[Setup] setup::Profile
    targets: [aarch64-unknown-linux-gnu]
    - Set({setup::compiler})
    - Set({setup::dist})
    - Set({setup::library})
    - Set({setup::none})
    - Set({setup::tools})
[Setup] setup::Hook
    targets: [aarch64-unknown-linux-gnu]
    - Set({setup::hook})
[Setup] setup::Link
    targets: [aarch64-unknown-linux-gnu]
    - Set({setup::link})
[Setup] setup::Editor
    targets: [aarch64-unknown-linux-gnu]
    - Set({setup::editor})
