src/bootstrap/src/core/builder/selectors/snapshots/x_test_coverage.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test coverage
---
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/coverage)
