src/bootstrap/src/core/builder/selectors/snapshots/x_test_coverage_map.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test coverage-map
---
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Set({test::coverage-map})
