src/bootstrap/src/core/builder/selectors/snapshots/x_test_coverage_run.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test coverage-run
---
[Test] test::Coverage
    targets: [aarch64-unknown-linux-gnu]
    - Set({test::coverage-run})
