src/bootstrap/src/core/builder/selectors/snapshots/x_test_debuginfo.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test debuginfo
---
[Test] test::Debuginfo
    targets: [aarch64-unknown-linux-gnu]
    - TestSuite(test::tests/debuginfo)
