src/bootstrap/src/core/builder/selectors/snapshots/x_test_librustdoc.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test librustdoc
---
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/librustdoc})
