src/bootstrap/src/core/builder/selectors/snapshots/x_test_librustdoc_rustdoc_html.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: test librustdoc rustdoc-html
---
[Test] test::CrateRustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({test::src/librustdoc})
[Test] test::RustdocHtml
    targets: [x86_64-unknown-linux-gnu]
    - TestSuite(test::tests/rustdoc-html)
